--- a/src/client/View/Chat/MessageRoomListView.fxml
+++ b/src/client/View/Chat/MessageRoomListView.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,18 +16,45 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="TOP_CENTER" prefHeight="543.0" prefWidth="443.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Chat.MessageRoomListViewController">
+<VBox alignment="TOP_CENTER" prefHeight="557.0" prefWidth="443.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Chat.MessageRoomListViewController">
    <children>
-      <HBox alignment="CENTER">
+      <GridPane prefHeight="37.0" prefWidth="403.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.20001220703125" minWidth="10.0" prefWidth="75.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.8000198364258" minWidth="10.0" prefWidth="228.60000762939455" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="130.20001220703125" minWidth="10.0" prefWidth="75.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints />
+        </rowConstraints>
          <children>
-            <Label text="Your chats">
-               <font>
-                  <Font size="40.0" />
-               </font>
-            </Label>
+            <Button fx:id="backButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#backButton" prefHeight="46.0" prefWidth="46.0">
+               <graphic>
+                  <ImageView fitHeight="58.0" fitWidth="72.0" mouseTransparent="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Icons/closeWindowIcon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <GridPane.margin>
+                  <Insets top="20.0" />
+               </GridPane.margin>
+            </Button>
+            <HBox alignment="CENTER" GridPane.columnIndex="1">
+               <children>
+                  <Label text="Your chats">
+                     <font>
+                        <Font size="40.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
          </children>
-      </HBox>
+         <VBox.margin>
+            <Insets bottom="10.0" />
+         </VBox.margin>
+      </GridPane>
+      <HBox alignment="CENTER" />
       <HBox alignment="CENTER">
          <children>
             <Label text="Search: ">
@@ -34,58 +63,70 @@
                </font>
             </Label>
             <TextField fx:id="searchBox" onKeyTyped="#searchButton" prefHeight="26.0" prefWidth="255.0" promptText="by: name, id, participants, messages" />
-            <Button mnemonicParsing="false" onAction="#searchButton" text="Search">
+            <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchButton" prefHeight="26.0" prefWidth="34.0">
                <HBox.margin>
                   <Insets left="5.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="24.0" fitWidth="59.0" mouseTransparent="true" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Icons/icons8-search-100.png" />
+                     </image>
+                     <viewport>
+                        <Rectangle2D width="26.0" />
+                     </viewport>
+                  </ImageView>
+               </graphic>
             </Button>
          </children>
          <VBox.margin>
             <Insets bottom="10.0" />
          </VBox.margin>
       </HBox>
-      <ScrollPane prefHeight="429.0" prefWidth="391.0">
-         <content>
-            <TableView fx:id="tableView" minWidth="-Infinity" prefHeight="400.0" prefWidth="402.0">
-              <columns>
-                <TableColumn fx:id="nameColumn" editable="false" prefWidth="198.4000301361084" resizable="false" text="Chat" />
-                  <TableColumn fx:id="participantsColumn" editable="false" prefWidth="182.39996337890625" resizable="false" text="Participants:" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </content>
-         <VBox.margin>
-            <Insets bottom="10.0" />
-         </VBox.margin>
-      </ScrollPane>
+      <TableView fx:id="tableView" minWidth="-Infinity" prefHeight="400.0" prefWidth="402.0">
+        <columns>
+          <TableColumn fx:id="nameColumn" editable="false" prefWidth="200.0" resizable="false" text="Chat" />
+            <TableColumn fx:id="participantsColumn" editable="false" prefWidth="200.0" resizable="false" text="Participants:" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
       <GridPane>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="1">
+            <HBox alignment="CENTER" GridPane.columnIndex="1">
                <children>
-                  <Button fx:id="backButton" mnemonicParsing="false" onAction="#backButton" prefWidth="45.6" text="Back">
-                     <HBox.margin>
-                        <Insets right="5.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button fx:id="openButton" mnemonicParsing="false" onAction="#openButton" text="Open">
+                  <Button fx:id="openButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openButton" prefHeight="39.0" prefWidth="39.0">
                      <HBox.margin>
                         <Insets left="5.0" />
                      </HBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="45.0" fitWidth="47.0" mouseTransparent="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Icons/openChatIcon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="302.0">
+            <HBox alignment="CENTER" prefHeight="26.0" prefWidth="302.0">
                <children>
-                  <Button fx:id="newButton" mnemonicParsing="false" onAction="#newButton" prefWidth="45.6" text="New" />
+                  <Button fx:id="newButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#newButton" prefHeight="39.0" prefWidth="39.0" snapToPixel="false">
+                     <graphic>
+                        <ImageView fitHeight="48.0" fitWidth="52.0" mouseTransparent="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Icons/addGenericIcon.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></Button>
                </children>
             </HBox>
          </children>
