--- a/src/client/View/Employee/EmployeeListView.fxml
+++ b/src/client/View/Employee/EmployeeListView.fxml
@@ -3,10 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,18 +15,44 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" prefHeight="501.0" prefWidth="769.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Employee.EmployeeListViewController">
+<VBox alignment="CENTER" prefHeight="488.0" prefWidth="769.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Employee.EmployeeListViewController">
    <children>
-      <HBox alignment="CENTER">
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label text="Employees">
+            <HBox alignment="CENTER" GridPane.columnIndex="1">
+               <children>
+                  <Label text="Employees">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Button cancelButton="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#backButton" prefHeight="46.0" prefWidth="46.0">
                <font>
-                  <Font size="36.0" />
+                  <Font size="19.0" />
                </font>
-            </Label>
+               <graphic>
+                  <ImageView fitHeight="61.0" fitWidth="62.0" mouseTransparent="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Icons/closeWindowIcon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <GridPane.margin>
+                  <Insets left="15.0" />
+               </GridPane.margin>
+            </Button>
          </children>
-      </HBox>
+      </GridPane>
       <HBox alignment="CENTER">
          <children>
             <GridPane>
@@ -53,10 +80,17 @@
                      </GridPane.margin>
                      <children>
                         <TextField fx:id="searchBox" onKeyTyped="#searchBoxKeyTyped" prefHeight="26.0" prefWidth="286.0" promptText="(By anyhing) Example: Lewandowsky" />
-                        <Button mnemonicParsing="false" onAction="#searchButton" text="Search">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchButton" prefHeight="26.0" prefWidth="38.0">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
+                           <graphic>
+                              <ImageView fitHeight="28.0" fitWidth="30.0" mouseTransparent="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Icons/icons8-search-100.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
                      </children>
                   </HBox>
@@ -71,59 +105,75 @@
          <children>
             <HBox alignment="CENTER">
                <children>
-                  <ScrollPane>
-                     <content>
-                        <TableView fx:id="employeeTable" editable="true" prefHeight="423.0" prefWidth="592.0">
-                           <columns>
-                              <TableColumn fx:id="userIDColumn" prefWidth="74.39998936653137" text="User ID" />
-                              <TableColumn fx:id="nameColumn" minWidth="-1.0" prefWidth="174.4000015258789" text="Name" />
-                              <TableColumn fx:id="surnameColumn" prefWidth="208.8000030517578" text="Surname" />
-                              <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="124.80001831054688" text="Role" />
-                           </columns>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
+                  <TableView fx:id="employeeTable" editable="true" prefHeight="342.0" prefWidth="697.0">
+                     <columns>
+                        <TableColumn fx:id="userIDColumn" prefWidth="74.39998936653137" text="User ID" />
+                        <TableColumn fx:id="nameColumn" minWidth="-1.0" prefWidth="174.4000015258789" text="Name" />
+                        <TableColumn fx:id="surnameColumn" prefWidth="208.8000030517578" text="Surname" />
+                        <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="131.19998168945312" text="Role" />
+                     </columns>
+                  </TableView>
                   <VBox alignment="CENTER">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#openButton" prefWidth="88.8" text="Open">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" />
+                              <Insets bottom="15.0" left="10.0" />
                            </VBox.margin>
+                           <graphic>
+                              <ImageView fitWidth="50.0" mouseTransparent="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Icons/openArrowInIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#addButton" prefWidth="88.8" text="Add">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#addButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                              <Insets bottom="15.0" left="10.0" top="15.0" />
                            </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/addPersonIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#editButton" prefWidth="88.8" text="Edit">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#editButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                              <Insets bottom="15.0" left="10.0" top="15.0" />
                            </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/editIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#removeButton" prefWidth="88.8" text="Remove">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#removeButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                              <Insets left="10.0" top="15.0" />
                            </VBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#backButton" prefWidth="88.8" text="Back">
-                           <font>
-                              <Font size="19.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" top="15.0" />
-                           </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/removePersonIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
                      </children>
                   </VBox>
@@ -138,6 +188,6 @@
       </HBox>
    </children>
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" />
+      <Insets bottom="10.0" left="20.0" right="20.0" />
    </padding>
 </VBox>
