--- a/src/client/View/Room/RoomListView.fxml
+++ b/src/client/View/Room/RoomListView.fxml
@@ -1,21 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="769.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.RoomListViewController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="529.0" prefWidth="769.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Room.RoomListViewController">
    <children>
-      <HBox alignment="CENTER">
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Label prefHeight="21.0" prefWidth="110.0" text="Rooms">
+            <HBox alignment="CENTER" GridPane.columnIndex="1">
+               <children>
+                  <Label prefHeight="21.0" prefWidth="110.0" text="Rooms">
+                     <font>
+                        <Font size="36.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <Button cancelButton="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#backButton" prefHeight="46.0" prefWidth="46.0">
                <font>
-                  <Font size="36.0" />
+                  <Font size="19.0" />
                </font>
-            </Label>
+               <graphic>
+                  <ImageView fitHeight="61.0" fitWidth="62.0" mouseTransparent="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Icons/closeWindowIcon.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <GridPane.margin>
+                  <Insets top="20.0" />
+               </GridPane.margin>
+            </Button>
          </children>
-      </HBox>
+      </GridPane>
       <HBox alignment="CENTER">
          <children>
             <GridPane>
@@ -43,10 +80,17 @@
                      </GridPane.margin>
                      <children>
                         <TextField fx:id="searchBox" onKeyTyped="#searchBoxKeyTyped" prefHeight="26.0" prefWidth="286.0" promptText="(By anyhing) Example: Vintervej 22" />
-                        <Button mnemonicParsing="false" onAction="#searchButton" text="Search">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchButton" prefHeight="26.0" prefWidth="41.0">
                            <HBox.margin>
                               <Insets left="5.0" />
                            </HBox.margin>
+                           <graphic>
+                              <ImageView fitHeight="28.0" fitWidth="29.0" mouseTransparent="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Icons/icons8-search-100.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
                      </children>
                   </HBox>
@@ -61,63 +105,79 @@
          <children>
             <HBox alignment="CENTER">
                <children>
-                  <ScrollPane>
-                     <content>
-                        <TableView fx:id="roomTable" prefHeight="423.0" prefWidth="593.0">
-                          <columns>
-                            <TableColumn fx:id="roomIDColumn" prefWidth="66.39998948574066" text="Room ID" />
-                            <TableColumn fx:id="roomNumberColumn" minWidth="-1.0" prefWidth="105.60001373291016" text="Room number" />
-                              <TableColumn fx:id="floorColumn" prefWidth="40.79998779296875" text="Floor" />
-                              <TableColumn fx:id="seatsColumn" minWidth="0.0" prefWidth="41.59999084472656" text="Seats" />
-                              <TableColumn fx:id="addressColumn" prefWidth="336.0000305175781" text="Building address" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                     </content>
-                  </ScrollPane>
-                  <VBox alignment="CENTER">
+                  <TableView fx:id="roomTable" prefHeight="342.0" prefWidth="679.0">
+                    <columns>
+                      <TableColumn fx:id="roomIDColumn" prefWidth="66.39998948574066" text="Room ID" />
+                      <TableColumn fx:id="roomNumberColumn" minWidth="-1.0" prefWidth="105.60001373291016" text="Room number" />
+                        <TableColumn fx:id="floorColumn" prefWidth="40.79998779296875" text="Floor" />
+                        <TableColumn fx:id="seatsColumn" minWidth="0.0" prefWidth="41.59999084472656" text="Seats" />
+                        <TableColumn fx:id="addressColumn" prefWidth="336.0000305175781" text="Building address" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+                  <VBox alignment="CENTER_RIGHT" prefHeight="342.0" prefWidth="73.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#openButton" prefWidth="88.8" text="Open">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#openButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" />
+                              <Insets bottom="15.0" left="10.0" />
                            </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/openArrowInIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#addButton" prefWidth="88.8" text="Add">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#addButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                              <Insets bottom="15.0" left="10.0" top="15.0" />
                            </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/addGenericIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#editButton" prefWidth="88.8" text="Edit">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#editButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                              <Insets bottom="15.0" left="10.0" top="15.0" />
                            </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/editIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#removeButton" prefWidth="88.8" text="Remove">
+                        <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#removeButton" prefWidth="72.0">
                            <font>
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets bottom="15.0" left="10.0" right="10.0" top="15.0" />
+                              <Insets left="10.0" top="15.0" />
                            </VBox.margin>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#backButton" prefWidth="88.8" text="Back">
-                           <font>
-                              <Font size="19.0" />
-                           </font>
-                           <VBox.margin>
-                              <Insets left="10.0" right="10.0" top="15.0" />
-                           </VBox.margin>
+                           <graphic>
+                              <ImageView mouseTransparent="true">
+                                 <image>
+                                    <Image url="@../Icons/deleteBinIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
                         </Button>
                      </children>
                   </VBox>
@@ -127,14 +187,17 @@
       </VBox>
       <HBox alignment="BOTTOM_LEFT">
          <children>
-            <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
+            <Label fx:id="errorLabel" text="errorLabel" textFill="RED">
+               <HBox.margin>
+                  <Insets top="5.0" />
+               </HBox.margin></Label>
          </children>
          <VBox.margin>
-            <Insets top="25.0" />
+            <Insets />
          </VBox.margin>
       </HBox>
    </children>
    <padding>
-      <Insets bottom="10.0" left="10.0" right="10.0" />
+      <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
    </padding>
 </VBox>
