--- a/src/client/View/Event/CreateEventView.fxml
+++ b/src/client/View/Event/CreateEventView.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -16,8 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="622.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
+<VBox prefHeight="710.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
     <children>
       <GridPane prefHeight="95.0" prefWidth="866.0">
          <columnConstraints>
@@ -37,7 +38,7 @@
                     </Label>
                </children>
             </HBox>
-            <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #7f878f;" GridPane.columnIndex="1">
+            <VBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="237.0" style="-fx-background-color: #7f878f;" GridPane.columnIndex="1">
                <children>
                   <ImageView fitHeight="66.0" fitWidth="68.0">
                      <image>
@@ -287,6 +288,56 @@
             <Insets bottom="20.0" />
          </VBox.margin>
         </HBox>
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="739.0">
+         <children>
+            <Label text="Participant : ">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#addEmployeePress" prefHeight="29.0" prefWidth="24.0">
+               <graphic>
+                  <ImageView fitHeight="29.0" fitWidth="26.0">
+                     <image>
+                        <Image url="@../Icons/icons8-add-user-male-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Label text="   " />
+            <Button layoutX="419.0" layoutY="10.0" mnemonicParsing="false" onAction="#removeEmployeePress" prefHeight="29.0" prefWidth="24.0">
+               <graphic>
+                  <ImageView fitHeight="29.0" fitWidth="26.0">
+                     <image>
+                        <Image url="@../Icons/icons8-denied-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Label layoutX="440.0" layoutY="21.0" text="   " />
+            <Button layoutX="446.0" layoutY="10.0" mnemonicParsing="false" onAction="#refreshPress" prefHeight="29.0" prefWidth="24.0">
+               <graphic>
+                  <ImageView fitHeight="29.0" fitWidth="26.0">
+                     <image>
+                        <Image url="@../Icons/icons8-refresh-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+         </children>
+      </HBox>
+      <VBox prefHeight="200.0" prefWidth="100.0">
+         <children>
+            <TableView fx:id="participantTable" prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn fx:id="usernameColumn" prefWidth="250.0" text="Username" />
+                <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="231.0" text="Name" />
+                  <TableColumn fx:id="idColumn" minWidth="0.0" prefWidth="81.0" text="ID" />
+                  <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="173.0" text="Role" />
+              </columns>
+            </TableView>
+         </children>
+      </VBox>
         <HBox alignment="CENTER_RIGHT">
             <children>
                 <Button mnemonicParsing="false" onAction="#cancelPress" prefHeight="42.0" prefWidth="102.0" text="Cancel">
