--- a/src/client/View/Event/EventListView.fxml
+++ b/src/client/View/Event/EventListView.fxml
@@ -1,21 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="861.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="984.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
    <children>
       <GridPane alignment="CENTER" prefHeight="175.0" prefWidth="794.0">
         <columnConstraints>
@@ -115,7 +105,7 @@
          <children>
             <ScrollPane prefHeight="340.0" prefWidth="880.0">
                <content>
-                  <TableView fx:id="eventList" prefHeight="335.0" prefWidth="854.0">
+                  <TableView fx:id="eventList" prefHeight="335.0" prefWidth="966.0">
                     <columns>
                         <TableColumn fx:id="idColumn" prefWidth="53.0" text="ID" />
                       <TableColumn fx:id="titleColumn" prefWidth="90.0" text="Title" />
@@ -125,7 +115,9 @@
                         <TableColumn fx:id="endTColumn" prefWidth="89.0" text="End time" />
                         <TableColumn fx:id="isOnlineColumn" prefWidth="93.0" text="Online ?" />
                         <TableColumn fx:id="platformColumn" prefWidth="60.0" text="Platform" />
-                        <TableColumn fx:id="roomColumn" prefWidth="122.0" text="Room" />
+                        <TableColumn fx:id="roomColumn" prefWidth="66.0" text="Room" />
+                        <TableColumn fx:id="roomColumn1" prefWidth="66.0" text="Room" />
+                        <TableColumn fx:id="creatorColumn" prefWidth="89.0" text="Creator" />
                     </columns>
                   </TableView>
                </content>
