--- a/src/client/View/Event/EventEmployeeView.fxml
+++ b/src/client/View/Event/EventEmployeeView.fxml
@@ -64,7 +64,7 @@
                     <content>
                         <TableView fx:id="employeeTable" prefHeight="200.0" prefWidth="597.0">
                             <columns>
-                                <TableColumn fx:id="usernameColumn" prefWidth="201.0" text="Username"/>
+                                <TableColumn fx:id="surnameColumn" prefWidth="201.0" text="Username"/>
                                 <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="205.0" text="Name"/>
                                 <TableColumn fx:id="IDColumn" minWidth="0.0" prefWidth="93.0" text="ID"/>
                                 <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="96.0" text="Role"/>
