--- a/src/client/View/Employee/EmployeeListView.fxml
+++ b/src/client/View/Employee/EmployeeListView.fxml
@@ -48,7 +48,7 @@
                   </ImageView>
                </graphic>
                <GridPane.margin>
-                  <Insets left="15.0" />
+                  <Insets left="15.0" top="10.0" />
                </GridPane.margin>
             </Button>
          </children>
@@ -188,6 +188,6 @@
       </HBox>
    </children>
    <padding>
-      <Insets bottom="10.0" left="20.0" right="20.0" />
+      <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
    </padding>
 </VBox>
