Fixing errors and perfecting

--- a/src/client/View/Chat/CreateMessageRoomView.fxml
+++ b/src/client/View/Chat/CreateMessageRoomView.fxml
@@ -207,7 +207,7 @@
             </GridPane>
          </children>
       </VBox>
-      <HBox>
+      <HBox alignment="CENTER">
          <children>
             <Label fx:id="errorLabel" text="errorLabel" textFill="RED" />
          </children>
